# R4C

./: .gitignore  README.md  pyproject.toml  pytest.ini
R4C/: settings.py
api/: robot_validators.py  serializers.py  urls.py  validators.py
customers/migrations/: 0002_alter_customer_id.py
orders/: tasks.py  views.py
orders/migrations/: 0002_alter_order_id.py
robots/: models.py  signals.py  views.py
robots/migrations/: 0002_alter_robot_id.py
tests/: test_validators.py  test_views.py
utils/: celery.py  models_utils.py  reports.py  service.py
